stle2.scss link on thanks page

--- a/style2.scss
+++ b/style2.scss
@@ -1942,5 +1942,8 @@ body {
 }
 // end of footer
 
-// thnak you page
-// end of thnak you page
+// thank you page
+#thanks {
+    
+}
+// end of thank you page
