--- a/css/style2.css
+++ b/css/style2.css
@@ -1482,3 +1482,41 @@ body {
           #footer .footer #bs21 p,
           #footer .footer #bs21 span {
             font-size: 1em; } }
+
+#thanks {
+  border: none;
+  padding: .5em 1em;
+  font-size: 1.5em;
+  background-color: #29323c;
+  border-radius: 5px;
+  text-align: center;
+  margin: 0 auto;
+  box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
+  #thanks h3 {
+    color: #ddd;
+    margin: .5em auto;
+    font-size: 1em; }
+  #thanks a i {
+    border: none;
+    outline: none;
+    margin: 1em auto;
+    padding: .5em 3em;
+    text-align: center;
+    color: #dddd;
+    position: relative; }
+    #thanks a i::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      transition: .3s;
+      box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
+    #thanks a i:hover {
+      transition: .2s;
+      transform: scale(0.98); }
+    #thanks a i:active {
+      transition: .2s;
+      transform: scale(0.9); }
