--- a/style2.scss
+++ b/style2.scss
@@ -1944,6 +1944,57 @@ body {
 
 // thank you page
 #thanks {
+    border: none;
+    padding: .5em 1em;
+    font-size: 1.5em;
+    background-color: #29323c;
+    border-radius: 5px;
+    text-align: center;
+    margin: 0 auto;
+    box-shadow: inset 3px 3px 5px #ddda,
+                inset -3px -3px 5px #000a;
     
+    h3 {
+        color: #ddd;
+        margin: .5em auto;
+        font-size: 1em;
+    }
+    a {
+    i {
+        border: none;
+        outline: none;
+        margin: 1em auto;
+        padding: .5em 3em;
+        text-align: center;
+        color: #dddd;
+        position: relative;
+        // icon box shadow
+        &::after {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            transition: .3s;
+            box-shadow: inset 3px 3px 5px #ddda,
+                        inset -3px -3px 5px #000a;
+        } 
+        // end of icon box shadow 
+        // icon hover and active states
+        &:hover {
+            transition: .2s;
+            transform: scale(.98);
+        }
+        &:active {
+            transition: .2s;
+            transform: scale(.9);
+        }
+        // end of icon hover and active states
+
+
+    }
+}
 }
 // end of thank you page
